--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-jest": "^26.3.0",
     "jest": "^26.4.2"
   }
 }
