--- a/exemplos-01/package.json
+++ b/exemplos-01/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:multiply": "jest -i multiply.spec.js",
+    "test:sum": "jest -i sum.spec.js",
+    "test:queryString": "jest -i queryString.spec.js"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
